{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 10,
  "lineage": "254ee681-60ba-816c-269f-f899b2a5109f",
  "resources": [
    {
      "module": "module.prod",
      "mode": "data",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider.aws"
    },
    {
      "module": "module.prod",
      "mode": "data",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:391748894518:instance/i-0c5fce5aa39e32952",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "bastion"
                ]
              }
            ],
            "get_password_data": false,
            "get_user_data": false,
            "id": "i-0c5fce5aa39e32952",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "key_name": "key_kp_staging",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface_id": "eni-0f5cb4905a34a17e3",
            "private_dns": "ip-10-0-0-98.ec2.internal",
            "private_ip": "10.0.0.98",
            "public_dns": "ec2-100-27-18-110.compute-1.amazonaws.com",
            "public_ip": "100.27.18.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef7b4d4ae3b3d2e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098009b681e8e4692",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a2b5ff08dcf6716"
            ]
          }
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-085fde250065e40f6",
            "domain": "vpc",
            "id": "eipalloc-08f1b5b6e495c799b",
            "network_interface": "eni-0dd8a88ab0c16ea94",
            "private_dns": "ip-10-0-0-6.ec2.internal",
            "private_ip": "10.0.0.6",
            "public_dns": "ec2-34-236-56-51.compute-1.amazonaws.com",
            "public_ip": "34.236.56.51",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.prod.module.vpc.aws_network_interface.eni-nat",
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.prod.module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst-bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d95fab7fff3776c",
            "arn": "arn:aws:ec2:us-east-1:391748894518:instance/i-0c5fce5aa39e32952",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5fce5aa39e32952",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key_kp_staging",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5cb4905a34a17e3",
            "private_dns": "ip-10-0-0-98.ec2.internal",
            "private_ip": "10.0.0.98",
            "public_dns": "ec2-100-27-18-110.compute-1.amazonaws.com",
            "public_ip": "100.27.18.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef7b4d4ae3b3d2e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-098009b681e8e4692",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03a2b5ff08dcf6716"
            ]
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-bn",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-07d3ab78eb7fa57f5",
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "description": "ENI for NAT instance",
            "id": "eni-0dd8a88ab0c16ea94",
            "mac_address": "12:b4:63:a1:e7:1d",
            "private_dns_name": "ip-10-0-0-6.ec2.internal",
            "private_ip": "10.0.0.6",
            "private_ips": [
              "10.0.0.6"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0eb718be0d35b3b68"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-098009b681e8e4692"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-055d593e917f3dfd01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0dd8a88ab0c16ea94",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055d593e917f3dfd0",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.prod.module.vpc.aws_network_interface.eni-nat",
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0716b10b14f74aee91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0dd8a88ab0c16ea94",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0716b10b14f74aee9",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.prod.module.vpc.aws_network_interface.eni-nat",
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "route-ng",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-dmz",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03e243b5120b1ec95",
            "owner_id": "391748894518",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d3ab78eb7fa57f5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-055d593e917f3dfd0",
            "owner_id": "391748894518",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0716b10b14f74aee9",
            "owner_id": "391748894518",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asc-app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09a1818bc55787049",
            "route_table_id": "rtb-055d593e917f3dfd0",
            "subnet_id": "subnet-047be1b49b560b76b"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_subnet.sn-app",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ab196ba540c8988",
            "route_table_id": "rtb-0716b10b14f74aee9",
            "subnet_id": "subnet-0cebd6442c74e715c"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_subnet.sn-app",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asc-db",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03bd681bab62bbe14",
            "route_table_id": "rtb-055d593e917f3dfd0",
            "subnet_id": "subnet-033141aca1b706046"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_subnet.sn-db",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eac7f7b85d172f92",
            "route_table_id": "rtb-0716b10b14f74aee9",
            "subnet_id": "subnet-01ae84bbeebb5d997"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_route_table.rt-private",
            "module.prod.module.vpc.aws_subnet.sn-db",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asc-dmz",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9243230d8bd81a",
            "route_table_id": "rtb-03e243b5120b1ec95",
            "subnet_id": "subnet-098009b681e8e4692"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.vpc.aws_route_table.rt-dmz",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ea8c2a5aaf3128d",
            "route_table_id": "rtb-03e243b5120b1ec95",
            "subnet_id": "subnet-0c47f4c6fa6d0c861"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.vpc.aws_route_table.rt-dmz",
            "module.prod.module.vpc.aws_subnet.sn-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:security-group/sg-0ad6b7a2562295f7e",
            "description": "Security group for app subnets",
            "egress": [],
            "id": "sg-0ad6b7a2562295f7e",
            "ingress": [],
            "name": "sg_app",
            "name_prefix": null,
            "owner_id": "391748894518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-bn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:security-group/sg-03a2b5ff08dcf6716",
            "description": "Security group for bastion instance",
            "egress": [],
            "id": "sg-03a2b5ff08dcf6716",
            "ingress": [],
            "name": "sg_bn",
            "name_prefix": null,
            "owner_id": "391748894518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:security-group/sg-0643b85b87e7c579e",
            "description": "Security group for db",
            "egress": [],
            "id": "sg-0643b85b87e7c579e",
            "ingress": [],
            "name": "sg_db",
            "name_prefix": null,
            "owner_id": "391748894518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-dmz",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:security-group/sg-0f6d2cc7945760d86",
            "description": "Security group for elastic load balancer",
            "egress": [],
            "id": "sg-0f6d2cc7945760d86",
            "ingress": [],
            "name": "sg_dmz",
            "name_prefix": null,
            "owner_id": "391748894518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:security-group/sg-0eb718be0d35b3b68",
            "description": "Security group for NAT instance",
            "egress": [],
            "id": "sg-0eb718be0d35b3b68",
            "ingress": [],
            "name": "sg_nat",
            "name_prefix": null,
            "owner_id": "391748894518",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-app-egr-allow-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3702829923",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ad6b7a2562295f7e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-app",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-app-ing-allow-bn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3368979641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad6b7a2562295f7e",
            "self": false,
            "source_security_group_id": "sg-03a2b5ff08dcf6716",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-app",
            "module.prod.module.sec.aws_security_group.sg-bn",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-app-ing-allow-dmz",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-365639996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ad6b7a2562295f7e",
            "self": false,
            "source_security_group_id": "sg-0f6d2cc7945760d86",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-app",
            "module.prod.module.sec.aws_security_group.sg-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-bn-egr-allow-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-1800804688",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03a2b5ff08dcf6716",
            "self": false,
            "source_security_group_id": "sg-0ad6b7a2562295f7e",
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-app",
            "module.prod.module.sec.aws_security_group.sg-bn",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-bn-ing-allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-2680719223",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03a2b5ff08dcf6716",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-bn",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-db-egr-allow-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2819386996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0643b85b87e7c579e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-db",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-db-ing-allow-dmz",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3127243602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0643b85b87e7c579e",
            "self": false,
            "source_security_group_id": "sg-0ad6b7a2562295f7e",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-app",
            "module.prod.module.sec.aws_security_group.sg-db",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-db-ing-allow-redis",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3295559607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0643b85b87e7c579e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-db",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-dmz-egr-allow-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1805348613",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f6d2cc7945760d86",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.sec",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-dmz-ing-allow-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1470027407",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f6d2cc7945760d86",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.sec.aws_security_group.sg-dmz",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-nat-egress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1870222490",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eb718be0d35b3b68",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg-nat-ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2461474906",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eb718be0d35b3b68",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_security_group.sg-nat",
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-047be1b49b560b76b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-047be1b49b560b76b",
            "map_public_ip_on_launch": false,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-0cebd6442c74e715c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0cebd6442c74e715c",
            "map_public_ip_on_launch": false,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-db",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-033141aca1b706046",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-033141aca1b706046",
            "map_public_ip_on_launch": false,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-01ae84bbeebb5d997",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01ae84bbeebb5d997",
            "map_public_ip_on_launch": false,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-dmz",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-098009b681e8e4692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-098009b681e8e4692",
            "map_public_ip_on_launch": true,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:subnet/subnet-0c47f4c6fa6d0c861",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c47f4c6fa6d0c861",
            "map_public_ip_on_launch": true,
            "owner_id": "391748894518",
            "vpc_id": "vpc-0e746b14389182a19"
          },
          "dependencies": [
            "module.prod.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:391748894518:vpc/vpc-0e746b14389182a19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07feb2cd90dba9756",
            "default_route_table_id": "rtb-0b2b5734c769e05c1",
            "default_security_group_id": "sg-0dca203da0e1a879b",
            "dhcp_options_id": "dopt-f968e983",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e746b14389182a19",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b2b5734c769e05c1",
            "owner_id": "391748894518"
          }
        }
      ]
    }
  ]
}